# wooden_core

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  codecov.yml  makefile_20230301  wooden_core.cpp  wooden_debug.cpp  wooden_debug.h  wooden_io.cpp  wooden_io.h  wooden_judge.cpp  wooden_judge.h  wooden_macro.h  wooden_main.cpp  wooden_skill.cpp  wooden_skill.h  wooden_start.cpp  wooden_start.h  wooden_status.cpp  wooden_status.h  wooden_test.cpp  wooden_test.h  wooden_util.cpp  wooden_util.h  wooden_util.inl
.github/: labeler.yml
.github/scripts/: check_clang_format.sh  run_clang_format.sh  run_tests.sh
.github/workflows/: build.yml  clang-format.yml  clang-formatter.yml  cmake-debug.yml  cmake-matrix-debug-linux.yml  cmake-matrix-debug-macos.yml  cmake-matrix-debug-windows.yml  cmake-matrix-debug.yml  cmake-matrix-release-self.yml  cmake-matrix-release.yml  cmake-matrix-test-unix.yml  cmake-matrix-test-windows.yml  cmake-matrix.yml  cmake-release.yml  cmake-ubuntu.yml  cmake-windows-mingw.yml  cmake-windows-msvc.yml  cmake-windows.yml  cmake.yml  codeql.yml  fetch-last-ref.yml  labeler.yml  runner.yml  static-check.yml  test-self.yml
doc/: skills.md
gui/unix/: main.cpp
gui/windows/: main.cpp  myfont.cpp
proto/: Qi.pb.cc  Qi.pb.h  Qi.proto  RoundPatch.pb.cc  RoundPatch.pb.h  RoundPatch.proto  Skill.pb.cc  Skill.pb.h  Skill.proto  SkillCount.pb.cc  SkillCount.pb.h  SkillCount.proto  SkillUsed.pb.cc  SkillUsed.pb.h  SkillUsed.proto  TagDied.pb.cc  TagDied.pb.h  TagDied.proto
tests/: CMakeLists.txt  test-list.txt
tests/failure/: CMakeLists.txt  failure.cpp
tests/hello/: CMakeLists.txt
tests/judge_have/: CMakeLists.txt  main.cpp
tests/num_skl_check/: CMakeLists.txt  main.cpp
tests/template/: CMakeLists.txt  main.cpp
tests/wooden_judge/: CMakeLists.txt  main.cpp  test.cpp  test.h
